--- a/sdmcoletor/webapp/view/Worklist.view.xml
+++ b/sdmcoletor/webapp/view/Worklist.view.xml
@@ -162,9 +162,9 @@
         <semantic:content>
             <Table
                 id="table"
-
+                core:model="rawModel"             
                 width="auto"
-                   items="{ path: '/ZCDS_SDM_MOVIMENTA_LPN',
+                   items="{ path: 'rawModel>/',
         sorter: [
             { path: 'centro',          descending: false },
             { path: 'deposito_origem', descending: false },
@@ -256,18 +256,20 @@
                         <cells>
                             <!--                         highlight="{= ${SelecionadosParaTransporte>DU} === 'BLOQ.' ? 'Error' : ${SelecionadosParaTransporte>DU} === 'LIB.' ? 'Success' : 'None'}"> -->
                             <!--      <CheckBox           selected="{selected}" select=".onSelectCheckBox"/> -->
-                            <ObjectIdentifier  id="idObject02" title="{lpn}"/>
-                            <Text id="idTextMaterial" text="{material}"/>
+                            <ObjectIdentifier  id="idObject02" title="{rawModel>lpn}"/>
+                            <Text id="idTextMaterial" text="{rawModel>material}"/>
                             <!--     <Text id="idTextDU" text="{DU}"
                                 state="{= ${DU} === 'BLOQ.' ? 'Error' : ${DU} === 'LIB.' ? 'Success' : 'None' }"/>  -->
                             <ObjectStatus  id="idTextDU"
-  text="{DU}"
-  state="{= ${DU} === 'BLOQ.' ? 'Error' : ${DU} === 'LIB.' ? 'Success' : 'None' }"/>
-                            <Text id="idTextDepoOri" text=               "{deposito_origem}"/>
-                            <Text id="idTextPosiOri" text=               "{posicao_origem}"/>
+                                text="{rawModel>DU}"
+                                state="{= ${rawModel>DU} === 'BLOQ.' ? 'Error' 
+                                        : ${rawModel>DU} === 'LIB.' ? 'Success' 
+                                        : 'None' }"/>
+                            <Text id="idTextDepoOri" text=               "{rawModel>deposito_origem}"/>
+                            <Text id="idTextPosiOri" text=               "{rawModel>posicao_origem}"/>
                             <!--    <Text text=               "{quant}"/> -->
-                            <Text id="idTextQuantidade" text="{= (+${Quantidade} || 0) + (+${StckQuant} || 0) }"/>
-                            <Text id="idTexLoteSDM" text=               "{lote_sdm}"/>
+                            <Text id="idTextQuantidade" text="{= (+${rawModel>Quantidade} || 0) + (+${rawModel>StckQuant} || 0) }"/>
+                            <Text id="idTexLoteSDM" text=               "{rawModel>lote_sdm}"/>
                         </cells>
                     </ColumnListItem>
                 </items>
